# CodeMentor-

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  mkdocs.yml  render.yaml
apps/api/: .dockerignore  Dockerfile  Dockerfile.worker  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 000_pgvector_extension.py  001_usuarios_roles_grupos.py  002_contenidos_lenguajes_ejercicios.py  003_evaluaciones_calificacion.py  004_exercise_type_live_code.py  005_ai_harness_rag.py  006_agentes_ia.py  007_progreso_reportes.py  008_actividad_errores.py  009_rag_topic_scope.py
apps/api/scripts/: ingest_rag.py  seed.py
apps/api/src/logica/: config.py  db.py  main.py
apps/api/src/logica/ai/: models.py  repository.py
apps/api/src/logica/ai/agents/: code_integrity.py  tutor.py  (+10 more)
apps/api/src/logica/core/: arq_dep.py  audit.py  errors.py  mixins.py  permissions.py  rate_limit.py  redis_dep.py  security.py  security_headers.py
apps/api/src/logica/mcp/: auth.py  server.py
apps/api/src/logica/workers/: inprocess.py  settings.py
apps/api/tests/: conftest.py
apps/api/tests/evals/: conftest.py  test_eval_runner.py  test_placeholder.py
apps/api/tests/evals/datasets/: exercise_generation.yaml  grading_suggestion.yaml  progressive_hint.yaml
apps/api/tests/integration/: conftest.py  test_agent_code_integrity.py  test_agent_config.py  test_agent_exercise_generator.py  test_agent_grading_assistant.py  test_agent_learning_analytics.py  test_agent_tutor.py  test_ai_budget_cache.py  test_ai_harness.py  test_auth_flow.py  test_content_curriculum.py  test_content_scheduling.py  test_evaluations_flow.py  test_evaluations_manual_review.py  test_evaluations_ranking.py  test_evaluations_scope.py  test_exercises_bank.py  test_gradebook.py  test_groups_authorization.py  test_groups_csv_enroll.py  test_health_infra.py  test_inprocess_worker.py  test_mcp_server.py  test_observability.py  test_practice.py  test_progress.py  test_rag_documents_api.py  test_rag_retrieval.py  test_reports.py  test_sandbox_pseint_api.py
apps/api/tests/sandbox/: test_sandbox_piston.py
apps/api/tests/unit/: test_ai_guardrails.py  test_ai_router.py  test_csv_import.py  test_grading.py  test_grading_live_code.py  test_permissions.py  test_pseint.py  test_rag_chunking.py  test_rate_limit.py  test_security.py  test_structured_helper.py
(+189 files in other folders)
